<resources>
    <string name="app_name">FaskT</string>
    <string name="prefs_files">com.alfontetarqui.fasktapp.PREFERENCE_FILE_KEY</string>
    <string name="welcome">"Welcome !"</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Register">"Register"</string>
    <string name="Validation">"Validation"</string>
    <string name="NameUser">"Name"</string>
    <string name="AgeUser">"Age"</string>
    <string name="AcademicGroup">"Academic"</string>
    <string name="UserNameMe">"Rendo Alfonte"</string>
    <string name="codeValidation">"code"</string>
    <string name="FitGroup">"Fit"</string>
    <string name="EatGroup">"Eat"</string>
    <string name="Individual">"Individual"</string>
    <string name="Academic">"Academic"</string>
    <string name="signInUp">"Sign in up"</string>
    <string name="terms">"Terms"</string>
    <string name="PrivacyPolicy">"Privacy Policy"</string>
    <string name="CookieUse">"Cookie Use"</string>
    <string name="ONLINEStatus">"ONLINE"</string>
    <string name="OFFLINEStatus">"OFFLINE"</string>
    <string name="loading">"Please Wait"</string>
    <string name="TypeLogin">"%TipodeLogeo%"</string>
    <string name="nameLogo">"Logo de la App Faskt"</string>
    <string name="Status">"Status:"</string>
    <string name="FocusOn">"Focus on"</string>
    <string name="TermsPhrase">"By sign in up, you agree to our Terms, Privacy Policy, and Cookie Use."</string>
    <string name="welcomePhrase">"A new time begins!"</string>
    <string name="ConnectGoogle">"Connect with Google"</string>
    <string name="ConnectFacebook">"Connect with Facebook"</string>
    <string name="HaveAccount">"Have you already account?"</string>
    <string name="LogIn">"Log in"</string>
    <string name="title_activity_time_line_navbar_main">TimeLine_navbar_MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_Tasks">Tasks</string>
    <string name="title_TimeLine">TimeLine</string>
    <string name="title_TimerMenu">TimerMenu</string>
    <string name="title_Notes">Notes</string>
    <string name="timeline_for_main">TimeLine  :</string>
    <string name="week_timeline">Week</string>
    <string name="prefs_file">com.alfontetarqui.fasktapp.PREFERENCE_FILE_KEY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Task1">Task01</string>
    <string name="hr01">01:00</string>
    <string name="hr02">02:00</string>
    <string name="hr03">03:00</string>
    <string name="hr04">04:00</string>
    <string name="hr05">05:00</string>
    <string name="hr06">06:00</string>
    <string name="hr07">07:00</string>
    <string name="hr08">08:00</string>
    <string name="hr09">09:00</string>
    <string name="hr10">10:00</string>
    <string name="hr11">11:00</string>
    <string name="hr12">12:00</string>
    <string name="hr13">13:00</string>
    <string name="hr14">14:00</string>
    <string name="hr15">15:00</string>
    <string name="hr16">16:00</string>
    <string name="hr17">17:00</string>
    <string name="hr18">18:00</string>
    <string name="hr19">19:00</string>
    <string name="hr20">20:00</string>
    <string name="hr21">21:00</string>
    <string name="hr22">22:00</string>
    <string name="hr23">23:00</string>
    <string name="hr00">00:00</string>
</resources>