<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/calendar_day"
        android:title="@string/title_TimeLine"
        />

    <item
        android:id="@+id/navigation_check"
        android:icon="@drawable/comment_check"
        android:title="@string/title_Tasks"
        />

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/duration"
        android:title="@string/title_TimerMenu"/>

    <item
        android:id="@+id/navigation_edit"
        android:icon="@drawable/edit"
        android:title="@string/title_Notes"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/admin_alt"
        android:title="@string/title_settings" />

</menu>
