<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_OFF_Activity">

    <LinearLayout
        android:id="@+id/ContentLStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/Text_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/Status"
            android:textColor="@color/grayDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Text_OnlineOFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/OFFLINEStatus"
            android:textColor="@color/grayDark"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logoOnlyThat"
        android:layout_width="253dp"
        android:layout_height="253dp"
        android:src="@drawable/light_logo_arrowb_wb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nameLogo"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        />
    <TextView
        android:id="@+id/TxtRegister"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:fontFamily="@font/outfit_regular"
        android:textSize="32sp"
        android:textColor="@color/blueDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoOnlyThat"
        />
    <EditText
        android:id="@+id/UserRegisterNameBoxTxt"
        android:inputType="textPersonName"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:hint="@string/NameUser"
        android:autofillHints="Rendo"
        android:textAlignment="center"
        android:fontFamily="@font/outfit_regular"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/TxtRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_rectangle_fillwhiteapp"
        />

    <EditText
        android:id="@+id/UserRegisterAgeBoxTxt"
        android:inputType="number"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_rectangle_fillwhiteapp"
        android:fontFamily="@font/outfit_regular"
        android:hint="@string/AgeUser"
        android:autofillHints="20"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserRegisterNameBoxTxt"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/TxtFocusOn"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FocusOn"
        android:fontFamily="@font/outfit_regular"
        android:textSize="11sp"
        android:textColor="@color/blueDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UserRegisterAgeBoxTxt"
        app:layout_goneMarginTop="10dp"
        />

    <LinearLayout
        android:id="@+id/AcademicIndividualContentBox"
        android:layout_width="213dp"
        android:layout_height="30dp"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtFocusOn">
        <androidx.appcompat.widget.AppCompatButton
            android:autofillHints="Student"
            android:id="@+id/UserRegisterTypeBoxTxt"
            android:layout_width="213dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_rectangle_fillwhiteapp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/Academic"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="11sp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/UserRegisterIndividualBoxTxt"
            android:layout_width="213dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_rectangle_fillwhiteapp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/Individual"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textSize="11sp"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnregisterOFFLINE"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/outfit_regular"
        app:layout_constraintTop_toBottomOf="@id/AcademicIndividualContentBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btnrectanglebluedark"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textAllCaps="false"
        />
    
    <TextView
        android:layout_width="175dp"
        android:layout_height="26dp"
        app:layout_constraintTop_toBottomOf="@id/btnregisterOFFLINE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/TermsPhrase"
        android:textSize="11sp"
        android:textAlignment="center"
        android:fontFamily="@font/outfit_regular"
        app:layout_constraintVertical_bias="0.2"
        />


</androidx.constraintlayout.widget.ConstraintLayout>