<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeOFF_Activity">

    <ImageView
        android:id="@+id/logoOnlyThat"
        android:layout_width="253dp"
        android:layout_height="253dp"
        android:src="@drawable/light_logo_arrowb_wb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/nameLogo"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.5"
        />
    <TextView
        android:id="@+id/NameApp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/outfit_regular"
        android:textSize="64sp"
        android:textColor="@color/blueDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoOnlyThat"
        />

    <ProgressBar
        android:id="@+id/progressBarIndeterminate"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:indeterminate="true"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintTop_toBottomOf="@id/NameApp"
        app:layout_constraintBottom_toTopOf="@id/PleaseWait"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.90"
        />

    <TextView
        android:id="@+id/WelcomePhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/welcomePhrase"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameApp" />

    <TextView
        android:id="@+id/PleaseWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/loading"
        android:textSize="15sp"
        android:textColor="@color/grayDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameApp" />

    <LinearLayout
        android:id="@+id/ContentLStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PleaseWait">

        <TextView
            android:id="@+id/Text_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/Status"
            android:textColor="@color/grayDark"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/Text_OnlineOFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/OFFLINEStatus"
            android:textColor="@color/grayDark"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>